syntax = "proto3";
package Oreka;
import "loginrequest.proto";
import "loginresponse.proto";
import "SubscribeTicker.proto";
import "TickData.proto";
import "AlertSetting.proto";

message ClientMessage 
{
    string 										type = 1;
    optional LoginRequest   					loginrequest = 2;
    optional LoginResponse  					loginresponse = 3;	
	optional SubscribeTicker					subscribeticker=4;	
	optional TickData							tickdata=5;
    optional AlertSetting                       alertsetting=89;		
}